Change date format in preview pane Fix alignment issue with dates in preview pane

--- a/src/components/CVPreview.css
+++ b/src/components/CVPreview.css
@@ -13,7 +13,6 @@
 
 .personal-prev > h1 {
     margin: 0;
-
     padding-bottom: 0.5rem;
 }
 
@@ -25,9 +24,10 @@
 
 .edu-prev-content {
     display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto auto;
-    gap: 25px;
+    grid-template-columns: 280px 1fr;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 1.5rem;
 }
 
 .edu-prev-content > * {
@@ -58,9 +58,10 @@
 
 .exp-prev-content {
     display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto auto;
-    gap: 25px;
+    grid-template-columns: 280px 1fr;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 1.5rem;
 }
 
 .exp-prev-content > * {
@@ -68,5 +69,13 @@
 }
 
 .company-name {
+    grid-column: 2;
+    grid-row: 1;
     font-weight: 700;
+}
+
+.date {
+    grid-column: 1;
+    grid-row: 1;
+    white-space: nowrap;
 }
